# MesaOS

./: .gitignore  BIOS_WIFI_FIX.md  Cargo.toml  Documentacion-Casera-RTK-8822CE.txt  README.md  TODO.md  build.sh  create_disk.sh  grub.cfg  hp-laptop-config.md  limine-uefi.cfg  limine.cfg  rust-toolchain.toml  setup_host_network.sh  tree.txt
limine/: limine
mesa_kernel/: Cargo.toml  build.rs  build_err.txt  build_output.txt  check_errors.txt  linker.ld
mesa_kernel/src/: config.rs  elf.rs  log.rs  main.rs  pipe.rs
mesa_kernel/src/acpi/: mod.rs
mesa_kernel/src/arch/aarch64/: context.rs  limine_req.rs  mod.rs
mesa_kernel/src/arch/x86_64/: context.rs  gdt.rs  limine_req.rs  mod.rs
mesa_kernel/src/drivers/: ata.rs  audio.rs  battery.rs  bios_analyzer.rs  block.rs  mod.rs  nvme.rs  rtc.rs  serial.rs
mesa_kernel/src/drivers/acpi/: mod.rs  tables.rs
mesa_kernel/src/drivers/framebuffer/: console.rs  font.rs  html.rs  mod.rs  palette.rs  ui.rs
mesa_kernel/src/drivers/keyboard/: mod.rs  scancode.rs
mesa_kernel/src/fs/: mesafs.rs  mod.rs  partition.rs  path.rs  ramfs.rs  sync.rs
mesa_kernel/src/linux/: list.rs  mod.rs  slab.rs  spinlock.rs
mesa_kernel/src/memory/: addr.rs  address_space.rs  heap.rs  mod.rs  paging.rs  pmm.rs  vmm.rs  xhci_access.rs
mesa_kernel/src/net/: arp.rs  config.rs  dhcp.rs  dns.rs  ethernet.rs  icmp.rs  ipv4.rs  mod.rs  tcp.rs  udp.rs
mesa_kernel/src/pci/: mod.rs
mesa_kernel/src/scheduler/: mod.rs
mesa_kernel/src/syscall/: mod.rs
mesa_kernel/src/userland/: exec.rs  mod.rs  programs.rs  shell.rs
mesa_kernel/src/users/: mod.rs
(+37 files in other folders)
